--- a/project_midway/abstract.tex
+++ b/project_midway/abstract.tex
@@ -9,7 +9,8 @@ with noise types which include Bernoulli noise, Gaussian noise, uniform random
 noise, etc. We also intend to study the effects of noise in different parts of
 the model which include neurons and network links in the input, hidden, and
 output layers, as well as matrix multiplication and gradient computation in the
-backward propagation process. Our preliminary results show that ...
+backward propagation process.
+%Our preliminary results show that ...
 
 \end{abstract}
 
