write part of LR

--- a/final-report/final-report.tex
+++ b/final-report/final-report.tex
@@ -6,6 +6,9 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{hhline}
+\newcommand{\lr}{\text{learningRate}}
+\newcommand{\cost}{\text{cost}}
+\newcommand{\mask}{\text{mask}}
 %\documentstyle[nips14submit_09,times,art10]{article} % For LaTeX 2.09
 
 
