--- a/final-report/intro.tex
+++ b/final-report/intro.tex
@@ -40,11 +40,11 @@ the model to capture the general observation of the training data that can be
 applied to the test data well.
 
 Our work, taking previous works as examples and guidance, tries to
-study the effect of introducing different noise into different
-components of deep learning neural networks. We focus on introducing
-noise into training process of neural networks instead of into dataset.
-We hope that our work can provide insights into future exploration of
-hardware approximate computation/storage techniques to accelerate and
-improve the accuracy of large-scale deep learning models.
+systematically study the effect of introducing {\em different noise} into {\em
+different components} of {\em different types} of deep learning neural networks.
+We observe that a reasonable amount, and a reasonable magnitude of noise, when
+introduced into a deep learning model, can improve the accuracy and the
+convergence rate of the model. We hope that our work can provide insights into
+future methods of approximate deep learning model, and inspire and motivate more
+work to take advantage of the 
 
-% Related works?
