--- a/final-report/final-report.tex
+++ b/final-report/final-report.tex
@@ -4,6 +4,8 @@
 \hypersetup{pdfstartview={FitH},colorlinks=false,pdfborder={0 0 0},}
 \usepackage{url}
 \usepackage{amsmath}
+\usepackage{wrapfig}
+\usepackage{subcaption}
 \usepackage{graphicx}
 \usepackage{hhline}
 \newcommand{\lr}{\text{learningRate}}
