--- a/final-report/con.tex
+++ b/final-report/con.tex
@@ -1,2 +1,18 @@
 \section{Conclusions}
 \label{sec:conclusions}
+In this project, we systematically perform experiments on studying the
+effect of adding noise into deep learning neural networks.
+We conduct experiments on adding different noise into different components
+of neural network models. The experiment results show that adding noise almost always improves accuracy.
+Our main observations are:
+(1) Noise added during early stage of the model can be better integrated
+while noise added during late stage of the model tends to cause
+fluctuation of accuracy;
+(2) Complicated neural network models can integrate and absorb
+noise better than simple neural network models;
+(3) Sometimes adding noise can improve not only accuracy but also
+convergence rate.
+We hope that our experiment results can provide insight into future design
+of deep learning neural network models and machine learning hardwares.
+
+Beyond this project
